# alignment

./: Cargo.toml  flake.nix  package-lock.json  package.json
dnas/how/zomes/coordinator/profiles/: Cargo.toml
dnas/how/zomes/integrity/profiles/: Cargo.toml
tests/: package.json
ui/: package.json
ui/src/: holochain-app.ts  how.service.ts  how.store.ts  util.ts  we.ts
ui/src/elements/: how-controller.ts  how-document.ts
we_dev/: config.ts
